syntax = "proto3";
package ncs.skin;
option go_package = "grpc";

import "google/api/annotations.proto";

message SkinInfo {
    int32 id = 1;
    string name = 3;
    string skin_path = 4;
    string arm_path = 5;
    int32 price = 6;
}

message GetInfoReq {
    int64 uid = 1;
}

message GetInfoResp {
    int64 uid = 1;
    int32 used_skin = 2;
}

message GetSkinsReq {
}

message GetSkinsResp {
    repeated SkinInfo info = 1;
}

message SetUsedSkinReq {
    int64 uid = 1;
    int32 used_skin = 2;
}

message SetUsedSkinResp {
}

service Skin {
    rpc GetSkins (GetSkinsReq) returns (GetSkinsResp) {
        option (google.api.http) = {
            get: "/game/skin"
        };
    }
    rpc GetInfo (GetInfoReq) returns (GetInfoResp) {
        option (google.api.http) = {
            get: "/game/skin/{uid}"
        };
    }
    rpc SetUsedSkin (SetUsedSkinReq) returns (SetUsedSkinResp) {
        option (google.api.http) = {
            post: "/game/skin/{uid}/used"
            body: "*"
        };
    }
}