syntax = "proto3";
package ncs.backpack.user;
option go_package = "grpc";

import "google/api/annotations.proto";

message Item {
    int32 id = 1;
    int32 amount = 2;
    int64 expr_time = 3;
    int64 length = 4;
}

message Info {
    int64 uid = 1;
    repeated Item items = 2;
}

message GetItemsReq {
    int64 uid = 1;
}

message GetItemsResp {
    Info info = 1;
}

message AddItemsReq {
    int64 uid = 1;
    repeated Item items = 2;
}

message AddItemsResp {
}

message RemoveItemReq {
    int64 uid = 1;
    Item item = 2;
    bool all = 3;
}

message RemoveItemResp {
}

service User {
    rpc GetItems (GetItemsReq) returns (GetItemsResp) {
        option (google.api.http) = {
            get: "/backpack/user/{uid}"
        };
    }
    rpc AddItems (AddItemsReq) returns (AddItemsResp) {
        option (google.api.http) = {
            post: "/backpack/user/{uid}/item"
            body: "*"
        };
    }
    rpc RemoveItem (RemoveItemReq) returns (RemoveItemResp);
}

